--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
 }
 body{
     background: #FFF6EE;
+    padding: 4% 0 !important;
 }
 td{
     width: 102px;
     height:102px;
-    max-height: 50%;
+    max-width: 20%;
+    max-height: 20%;
     padding: 0;
 }
 .horizontal{
@@ -19,13 +21,14 @@ td{
     border-bottom: 2px solid #C8C8C8;
 }
 .gamecontainer{
-    margin-top: 100px;
     background: #27352A;
     padding: 20px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
     height: 400px;
+    max-height: 100%;
     width: 400px;
+    max-width: 100%;
     margin: auto;
     border-top: 2em solid #D3AC83 ;
     border-bottom: 2em solid #D3AC83 ;
